# skcc_skimmer

./: .gitignore  .pylintrc  CLAUDE.md  GenerateVersionStamp.py  QuickStart.txt  README.md  build_skcc_skimmerEXE.bat  cCommon.py  cConfig.py  cRBN.py  cSocketLoop.py  cStateMachine.py  pyproject.toml  requirements.txt  run  run.bat  skcc_skimmer.cfg  skcc_skimmer.py  venv_setup.bat  venv_setup.py  venv_setup.sh
.claude/: settings.local.json
Lib/: cCommon.py  cConfig.py  cRBN.py  cSocketLoop.py  cStateMachine.py
__MACOSX/: ._cConfig_n9se.py  ._skcc_skimmer.cfg  ._skcc_skimmer_n9se.py
